--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -1,6 +1,9 @@
 @import "~reset-css/reset.css";
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,500");
 @import "../../config/variables";
 
 body {
   background-color: $bg-color;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", 'Roboto Mono', Helvetica,
+  Arial, sans-serif;
 }
