--- a/frontend/src/components/Footer/styles.scss
+++ b/frontend/src/components/Footer/styles.scss
@@ -9,19 +9,36 @@
     justify-content: space-between;
     font-weight: 600;
     text-transform: uppercase;
-    font-size: 12px;
-        .column {
-            .nav {
-                .list {
-                    display: flex;
-                    .listitem {
-                        margin-left: 20px;
-                        color: $dark-blue;
+    font-size: $small-font-size;
+    margin-bottom: 55px;
+    flex-wrap: wrap;
+    @include breakpoint(mobileonly) {
+      justify-content: center;
+    }
+    .column {
+        margin-bottom: 15px;
+        @include breakpoint(mobileonly) {
+            margin-bottom: 0;
+        }
+        .nav {
+            .list {
+                display: flex;
+                flex-wrap: wrap;
+                @include breakpoint(mobileonly) {
+                    justify-content: center;
+                }
+                .listitem {
+                    margin-left: 20px;
+                    color: $dark-blue;
+                    cursor: pointer;
+                    @include breakpoint(mobileonly) {
+                        margin-bottom: 15px;
                     }
                 }
             }
-            .copyright {
-                color: $dark-grey;
-            }
         }
+        .copyright {
+            color: $dark-grey;
+        }
+    }
 }
