--- a/frontend/src/shared/formStyles.scss
+++ b/frontend/src/shared/formStyles.scss
@@ -39,4 +39,22 @@
             opacity: 0.8;
         }
     }
+    .facebook-link {
+        align-items: center;
+        color: #385185;
+        justify-content: center;
+        margin-bottom: 25px;
+        cursor: pointer;
+        background-color: white;
+        border: 0;
+        font-size: $normal-font-size;
+        text-align: center;
+        i {
+            margin-right: 5px;
+        }
+        &:focus,
+        &:active {
+            outline: none;
+        }
+    }
 }
