--- a/frontend/src/components/Navigation/styles.scss
+++ b/frontend/src/components/Navigation/styles.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     .inner {
-      max-width: 65%;
+      max-width: $max-page-width;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -51,4 +51,3 @@
       }
     }
   }
-  
