--- a/frontend/src/config/_colors.scss
+++ b/frontend/src/config/_colors.scss
@@ -2,3 +2,6 @@ $bg-color: #f6f6f6;
 $dark-blue: #222831;
 $dark-grey: #393e46;
 $light-blue: #3897f0;
+$light-grey: #efefef;
+$border-color: #e6e6e6;
+$light-grey: #efefef;
