--- a/frontend/src/config/_mixins.scss
+++ b/frontend/src/config/_mixins.scss
@@ -29,3 +29,24 @@
         border-radius: 5px;
     }
 }
+
+@mixin blueButton() {
+    -webkit-appearance: none;
+    border-radius: 3px;
+    background-color: $light-blue;
+    color: white;
+    font-weight: 600;
+    border: 0;
+    font-size: $normal-font-size;
+    line-height: 26px;
+    cursor: pointer;
+    width: 100%;
+    padding: 2px 9px;
+    &:focus,
+    &:active {
+      outline: none;
+    }
+    &:active {
+      opacity: 0.7;
+    }
+}
