--- a/frontend/src/components/UserDisplay/styles.scss
+++ b/frontend/src/components/UserDisplay/styles.scss
@@ -14,6 +14,11 @@
       margin-left: 10px;
       .username {
         font-weight: 600;
+        display: block;
+        margin-bottom: 3px;
+      }
+      .name {
+        color: $dark-grey;
       }
     }
     .bigAvatar {
